--- a/index.html
+++ b/index.html
@@ -91,6 +91,6 @@
         </div>
       </section>
     </div>
-    <script src="./js/main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
