--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p class="bs italic" id="questionNumber">Question 6 of 10</p>
             <p class="hm bold" id="questionText">Which of these color contrast ratios defines the minimum WCAG 2.1 Level AA requirement for normal text?</p>
             <div class="progress">
-              <span></span>
+              <span id="progress"></span>
             </div>
           </div>
 
